[metadata]
name = redteam-ci
version = 0.1.0
description = Prompt Guardrails and Red-Team CI Harness for local LLMs
author = Your Name
license = MIT
python_requires = >=3.10

[options]
package_dir =
    = src
packages = find:

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
markers =
    unit: Unit tests (no LLM required)
    integration: Integration tests (requires LLM runner)
    jetson: Tests that require Jetson hardware

[ruff]
line-length = 100
target-version = "py310"
